--- a/CSS/display/estilo/inline-block.css
+++ b/CSS/display/estilo/inline-block.css
@@ -26,3 +26,29 @@
 	display: inline-block;
 	width: 100%;
 }
+
+#exe {
+	background: lightblue;
+	width: 85%;
+	height: 200px;
+}
+
+.box {
+	display: inline-block;
+	width: 80px;
+	height: 50px;
+}
+
+.box-1 {
+	background: orange;
+}
+
+.box-2 {
+	background: #656595;
+}
+
+.box-3 {
+	background: #952486;
+}
+
+
