--- a/CSS/display/estilo/inline.css
+++ b/CSS/display/estilo/inline.css
@@ -23,3 +23,31 @@
 .ex-three {
 	background-color: #3b97d3;
 }
+
+
+section {
+	background: #f65658;
+	height: 40px;
+	text-align: center;
+
+}
+
+.box {
+	
+	width: 33.333%;
+	height: 150px;
+	display: inline;
+	
+}
+
+.box-1 {
+	background-color: #faa116;
+}
+
+.box-2 {
+	background-color: #57c7c3;
+}
+
+.box-3 {
+	background-color: #3b97d3;
+}
